Added authorizations abilities to Category controller
