# docs/api.yaml
@@ -63,6 +63,8 @@ paths:
       tags:
         - Categories
       summary: Create a new category
+      security:
+          - BearerAuth: [ ]
       requestBody:
         required: true
         content:
@@ -78,6 +80,8 @@ paths:
                 $ref: '#/components/schemas/Category'
         422:
           description: Unprocessable entity/content
+        '403':
+          description: Forbidden
   /api/categories/{id}:
     get:
       tags:
@@ -103,6 +107,8 @@ paths:
       tags:
         - Categories
       summary: Update a category by ID
+      security:
+        - BearerAuth: [ ]
       parameters:
         - name: id
           in: path
@@ -117,6 +123,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Category'
+        '403':
+          description: Forbidden
       requestBody:
         required: true
         content:
@@ -127,6 +135,8 @@ paths:
       tags:
         - Categories
       summary: Delete a category by ID
+      security:
+          - BearerAuth: [ ]
       parameters:
         - name: id
           in: path
